--- a/gb/19/10/29/n11620095.md
+++ b/gb/19/10/29/n11620095.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/viliqq330/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/viliqq330/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/viliqq330/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/viliqq330/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/viliqq330/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/viliqq330/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/viliqq330/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>免长途就医 癌症基金会助银发癌友</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/db0f2e4c8c13cda82578b95ad46bdf8e-600x400.jpg" />
 <h6>台湾癌症基金会公布癌友就医交通困境调查结果。（台癌基金会提供）
 </h6>
 <hr>
-<p>【大纪元2019年10月29日讯】（大纪元记者赖玟茹台湾台北报导）全台每年新增逾十万名<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E7%99%8C%E7%97%87.md#1">癌症</a>患者，其中60岁以上占将近六成（59.2%），然而，癌症治疗需要高频率稳定回诊，平均每2~3周，甚至每天就要回诊接受化放疗、标靶或其他治疗。台湾癌症基金会与企业合作，推出“银发南乡，<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%B0%B1%E5%8C%BB.md#1">就医</a>无碍”交通补助专案，协助解决大南部及东部地区银发<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E7%99%8C%E5%8F%8B.md#1">癌友</a>就医上的交通问题。</p>
-<p>根据台湾<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E7%99%8C%E7%97%87.md#1">癌症</a>基金会针对北中南东四大地区进行“<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E7%99%8C%E5%8F%8B.md#1">癌友</a><ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%B0%B1%E5%8C%BB.md#1">就医</a>交通困境调查”，探究癌友就医可近性困境结果显示，长途往返就医让患者身体不适状况加剧，且伴随而来的药物副作用使得就医更显困难。</p>
+<p>【大纪元2019年10月29日讯】（大纪元记者赖玟茹台湾台北报导）全台每年新增逾十万名<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%99%8C%E7%97%87.md#1">癌症</a>患者，其中60岁以上占将近六成（59.2%），然而，癌症治疗需要高频率稳定回诊，平均每2~3周，甚至每天就要回诊接受化放疗、标靶或其他治疗。台湾癌症基金会与企业合作，推出“银发南乡，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B0%B1%E5%8C%BB.md#1">就医</a>无碍”交通补助专案，协助解决大南部及东部地区银发<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%99%8C%E5%8F%8B.md#1">癌友</a>就医上的交通问题。</p>
+<p>根据台湾<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%99%8C%E7%97%87.md#1">癌症</a>基金会针对北中南东四大地区进行“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%99%8C%E5%8F%8B.md#1">癌友</a><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B0%B1%E5%8C%BB.md#1">就医</a>交通困境调查”，探究癌友就医可近性困境结果显示，长途往返就医让患者身体不适状况加剧，且伴随而来的药物副作用使得就医更显困难。</p>
 <p>调查显示，北部与中部地区有20%及32%，大南部、东部地区有六成癌友认为，无法持续就医的主要原因为交通不便，甚至有近七成（南部67%、东部66%）曾因此有中断治疗的想法。</p>
-<p>进一步从交通时间来看，北区71%的癌友就医交通往返时间2小时内即可完成；反之，地处<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%81%8F%E4%B9%A1.md#1">偏乡</a>的南部与东部，因交通运输不发达、地区幅员广，一半以上的癌友需花费超过4小时来回就医（南部占56%、东部占68%）。</p>
-<p>蔡丽娟指出，全台目前共有21家医学中心（儿童医院除外），北部地区就有11家，中部地区有4家，大南部地区5家，而东部地区（宜花东）占全台总面积近三分之一，仅有1家医学中心。当进一步标示出各医疗机构地理位置，就能看出这些医学中心大多集中在都市地区，以花莲与高雄为例，医学中心皆分布在市区，让<ahref="https://github.com/viliqq330/djy/blob/master/gb/tag/%E5%81%8F%E4%B9%A1.md#1">偏乡</a>地区就医极为不便。</p>
+<p>进一步从交通时间来看，北区71%的癌友就医交通往返时间2小时内即可完成；反之，地处<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%81%8F%E4%B9%A1.md#1">偏乡</a>的南部与东部，因交通运输不发达、地区幅员广，一半以上的癌友需花费超过4小时来回就医（南部占56%、东部占68%）。</p>
+<p>蔡丽娟指出，全台目前共有21家医学中心（儿童医院除外），北部地区就有11家，中部地区有4家，大南部地区5家，而东部地区（宜花东）占全台总面积近三分之一，仅有1家医学中心。当进一步标示出各医疗机构地理位置，就能看出这些医学中心大多集中在都市地区，以花莲与高雄为例，医学中心皆分布在市区，让<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%81%8F%E4%B9%A1.md#1">偏乡</a>地区就医极为不便。</p>
 <p>台癌表示，希望大众能够正视偏乡就医的交通问题，或许偏乡地区的就医距离遥远，但透过各界的善心挹注，相信能弥补距离的困境，帮助癌友抗癌之路更加坚定。◇</p>
 <p>责任编辑：陈玟绮</p>
 
@@ -18,42 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/17/5/2/n9097253.md#1">罹乳癌剩半年  中西医治疗20年仍健在</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/17/8/16/n9535162.md#1">南乡就医难 癌友想放弃治疗</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/17/12/17/n9965009.md#1">头发掉光没在怕！她为三子一夫拼力抗癌13年</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/18/4/23/n10328500.md#1">台湾癌末爸爸成功抗癌 如愿牵女儿走红毯</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/19/4/14/n11185473.md#1">歌手黄士祐麻吉辞世 赶不上《毕业人生》演唱会</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12295309.md#1">拍客V.M.的视界 作品穿越时空登台</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12294901.md#1">疫情缩荷包 台ATM提借款年增1成</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12294909.md#1">增通路优化系统 动滋券领取日延1周</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12289650.md#1">观光分流 澎管处提5大政策纾解人潮</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12289648.md#1">台铁售票新制 可预订4周后车票</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/2/n9097253.md#1">罹乳癌剩半年  中西医治疗20年仍健在</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/8/16/n9535162.md#1">南乡就医难 癌友想放弃治疗</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/12/17/n9965009.md#1">头发掉光没在怕！她为三子一夫拼力抗癌13年</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/4/23/n10328500.md#1">台湾癌末爸爸成功抗癌 如愿牵女儿走红毯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/4/14/n11185473.md#1">歌手黄士祐麻吉辞世 赶不上《毕业人生》演唱会</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740024.md#1">刺激台北书展买气 文化部推2千万元购书抵用券</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740030.md#1">端午连假3类路段易塞 公总推公共运输优惠</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739276.md#1">台麦当劳薯条缺货 最快5/20恢复供应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738544.md#1">516国际光日 立委：应重视光害问题</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737749.md#1">全国儿童安全日 台22县市首长吁重视交安</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045322.md#1" target="_blank">《苦菜花》人物原型的真实人生（3）</a></li><li><a href="https://github.com/viliqq330/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787603.md#1" target="_blank">钟延：从610副主任难逃610魔咒说起</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/20/n10073567.md#1" target="_blank">中共教育投入与民国时期的教育投入</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">一位中国花季少女给奶奶的那个吻</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293305.md#1">武汉坠楼护士生前留言曝光 曾曝抗疫黑幕</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12293985.md#1">美国关中领馆效应 亲共者大难临头各自飞</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12295214.md#1">李登辉生前称共产主义骗人 曾评价习近平</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12293750.md#1">【翻墙必看】蝗灾已在大陆泛滥 麻烦大了</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293489.md#1">【新闻看点】美澳军事合作 欧盟27国制裁中共</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12293399.md#1">与李晨分手一年 范冰冰首谈失恋心情</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12290343.md#1">亲共举动遭炮轰 谭咏麟关闭脸书IG投奔微博</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/28/n12290665.md#1">看完长文只回一个问号 杨幂释由登上热搜榜首</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12294569.md#1">宫胁咲良怕生 谈到Irene倒抽气 想与TWICE攀谈</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/30/n12296166.md#1">杜汶泽悼念李登辉：台湾之父一路好走</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/29/n12291800.md#1">在1905年的照片中看到自己 英男相信有前世</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/25/n12283672.md#1">【佳人传】黄氏姐妹的不同人生</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/16/n12261035.md#1">华盛顿将军系列故事：乔治·华盛顿精神</a></li>
-<li><a href="https://github.com/viliqq330/djy/blob/master/gb/20/7/25/n12283826.md#1">散文：忆香港</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/viliqq330/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/viliqq330/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/29/n11620095.htm">免长途就医 癌症基金会助银发癌友</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/29/n11620095.htm">免长途就医 癌症基金会助银发癌友</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/viliqq330/djy/blob/master/gb/19/10/29/n11620095.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/viliqq330/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/viliqq330/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/viliqq330/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/viliqq330/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/viliqq330/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/10/29/n11620095.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
